[package]
name = "podded"
version = "0.0.1"
description = "Zero-copy types for constraint environments"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/podded"
license = "MIT"
edition = "2021"
readme = "README.md"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"
test = true

[dependencies]
bytemuck = { version = "^1.14", features = ["derive"] }
