[package]
authors = ["Metaplex Developers <dev@metaplex.com>"]
description = "Zero-copy types for constraint environments"
edition = "2021"
license = "MIT"
name = "podded"
readme = "README.md"
repository = "https://github.com/metaplex-foundation/podded"
version = "0.5.1"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"
test = true

[dependencies]
bytemuck = { version = "^1.14", features = ["derive"] }
solana-program = "<3"
